# pip_updater

./: README.md  pyproject.toml
pip_updater/: __init__.py
test/: _build_tests.py  test_compare_versions.py  test_distribution_origin.py  test_force_update_packages.py  test_list_packages.py  test_list_packages_tree.py  test_orphaned_packages.py  test_print_orphaned_packages.py  test_read_package_versions.py  test_update_packages.py
